--- a/application-bucket4j.yaml
+++ b/application-bucket4j.yaml
@@ -7,7 +7,7 @@ rate:
         refillPeriod: 1
         timeUnit: DAYS
         version: 5
-      - key: ${PNB_INDEX_AGGREGATOR_SECRET}
+      - key: pnb-index-aggregator
         capacity: 10000
         refillTokens: 1000
         refillPeriod: 1
